# UNL_CSCE451_OperatingSystems

HW00/PA0/: Makefile  Makefile_complex  Makefile_simple  foo.c  foo.h  hello_world.c
HW00/hw00/hw00/: helloworld.cpp
HW00/hw00/hw00.xcodeproj/: project.pbxproj
HW01/: README.md  main.cpp  parser.cpp  xshen5_hw1.pages
HW01/PA1/docs/: man_parse.txt  phase1_notes.txt
HW01/PA1/source/: osh  parse.cpp  parse.out
HW01/PA1/testscripts/: 1.singleCommand.txt  2.simpleRedir.txt  3.moreRedir.txt  4.logicalConditional.txt  ea1.txt  ea2.txt
HW01/hw01/: 4.logicalConditional.txt  5.malformed.txt  8.morePipes.txt  9.simplePipeAndLogical.txt  ea3.txt  ea4.txt  ea5.txt  ea7.txt  main.cpp
HW01/hw01/hw01.xcodeproj/: project.pbxproj
HW02/: HW2.pages
HW02/PA2/docs/: pipes.pptx
HW02/PA2/source/: osh
HW02/PA2/testscripts/: 6.singlePipe.txt  7.moreLogical.txt  ea6.txt  ea8.txt  ea9.txt
HW02/xshen5_pa2/: README.md
HW03/: CSCE451_HW3.pages
HW03/PA3/: part1  part2
HW03/hw3_part1/hw3_part1/: part1.cpp
HW03/hw3_part1/hw3_part1.xcodeproj/: project.pbxproj
HW03/hw3_part2/hw3_part2/hw3_part2.xcodeproj/: project.pbxproj
HW03/xshen5_pa3/prob1/: Makefile  README.md  part1.cpp
HW03/xshen5_pa3/prob2/: Makefile  README.md  part2.cpp
HW04/: HW4_SOL.pages
HW04/PA4/: README
HW04/PA4/code/: CMakeLists.txt  Makefile  scheduler.c  worker.c
HW05/PA5/: correct2_fifo.txt  part1.out  part2.out
HW05/PA5/part1/: template.c
HW05/xshen5_pa5/part1/: Makefile  part1.cpp
HW05/xshen5_pa5/part2/: Makefile  part2.cpp
Lectures/: .ch5.pdf.icloud  .ch8.pdf.icloud  .ch9.pdf.icloud
(+12 files in other folders)
